--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-    "name"           : "oo-portal",
-    "version"        : "0.0.1",
-    "repository"     : {
-        "type": "git",
-        "url" : "https://github.com/mzruya/oo-portal"
-    },
-    "author"         : "Matan Zruya",
-    "license"        : "MIT",
-    "readmeFilename" : "README.md",
-    "devDependencies": {
-        "gulp-connect"  : "^2.0.5",
-        "gulp"          : "*",
-        "gulp-vulcanize": "*",
-        "gulp-bower"    : "*"
-    }
+  "name": "oo-portal",
+  "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mzruya/oo-portal"
+  },
+  "author": "Matan Zruya",
+  "license": "MIT",
+  "readmeFilename": "README.md",
+  "devDependencies": {
+    "express": "^4.5.1",
+    "gulp": "^3.8.5",
+    "gulp-bower": "0.0.6",
+    "gulp-css-base64": "^1.2.3",
+    "gulp-img64": "0.0.6",
+    "gulp-livereload": "^2.1.0",
+    "gulp-vulcanize": "^0.2.0"
+  }
 }
